organisation, representative view

--- a/app/views/hybrid_bills/steps/group/1.html.erb
+++ b/app/views/hybrid_bills/steps/group/1.html.erb
@@ -53,12 +53,8 @@ this is organisation's external representative section
 <%= text_field_tag 'HybridBillPetitionAgent[JobTitle]' %>
 <%= label_tag 'AddressLine1', 'Address 1' %>
 <%= text_field_tag 'HybridBillPetitionAgent[AddressLine1]' %>
-<%= label_tag 'Town', 'Town' %>
-<%= text_field_tag 'HybridBillPetitionAgent[Town]' %>
-<%= label_tag 'County', 'County' %>
-<%= text_field_tag 'HybridBillPetitionAgent[County]' %>
-<%= label_tag 'Country', 'Country' %>
-<%= text_field_tag 'HybridBillPetitionAgent[Country]' %>
+<%= label_tag 'AddressLine1', 'Address 2' %>
+<%= text_field_tag 'HybridBillPetitionAgent[AddressLine2]' %>
 <%= label_tag 'Postcode', 'Post Code' %>
 <%= text_field_tag 'HybridBillPetitionAgent[Postcode]' %>
 <%= label_tag 'Email', 'Email' %>
