--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -24,6 +24,9 @@
       - if @person.image_id(show_placeholder:false)
         = render 'image'
 
+    - if @current_roles
+      = render 'current_roles_sentence', current_roles: @current_roles
+
 - if @current_incumbency && @current_party_membership
   %section
     .container
